// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate snapshots Subheading: 0 1`] = `
<h3
  className="typography-0-1-1 typography__3-0-1-4 subheading-0-1-11 subheading__1-0-1-12"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 1 1`] = `
<h1
  className="typography-0-1-1 typography__3-0-1-4 subheading-0-1-11 subheading__1-0-1-12"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 2 1`] = `
<h1
  className="typography-0-1-1 typography__3-0-1-4 subheading-0-1-11 subheading__1-0-1-12"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 3 1`] = `
<h2
  className="typography-0-1-1 typography__4-0-1-5 subheading-0-1-11 subheading__2-0-1-13"
  data-sketch-symbol="Subheading 2"
>
  Subheading test string
</h2>
`;

exports[`generate snapshots Subheading: 4 1`] = `
<h3
  className="typography-0-1-1 typography__5-0-1-6 subheading-0-1-11 subheading__3-0-1-14"
  data-sketch-symbol="Subheading 3"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 5 1`] = `
<h4
  className="typography-0-1-1 typography__6-0-1-7 subheading-0-1-11 subheading__4-0-1-15"
  data-sketch-symbol="Subheading 4"
>
  Subheading test string
</h4>
`;

exports[`generate snapshots Subheading: 6 1`] = `
<h5
  className="typography-0-1-1 typography__7-0-1-8 subheading-0-1-11 subheading__5-0-1-16"
  data-sketch-symbol="Subheading 5"
>
  Subheading test string
</h5>
`;

exports[`generate snapshots Subheading: 7 1`] = `
<h6
  className="typography-0-1-1 typography__8-0-1-9 subheading-0-1-11 subheading__6-0-1-17"
  data-sketch-symbol="Subheading 6"
>
  Subheading test string
</h6>
`;
